--- a/assets/css/source/_mixins.scss
+++ b/assets/css/source/_mixins.scss
@@ -4,11 +4,11 @@
     @media (max-width: 575.98px) { @content; }
 }
 
-@mixin phone-up {
+@mixin phone-up { // -sm
     @media (min-width: 576px) { @content; }
 }
 
-@mixin phone-to-tablet-portrait {
+@mixin phone-to-tablet-portrait { // -sm
     @media (min-width: 576px) and (max-width: 767.98px){ @content; }
 }
 
@@ -24,15 +24,15 @@
     @media (max-width: 767.98px) { @content; }
 }
 
-@mixin tablet-portrait-up{
+@mixin tablet-portrait-up{ // -md
     @media (min-width: 768px) { @content; }
 }
 
-@mixin tablet-portrait-to-landscape {
+@mixin tablet-portrait-to-landscape { // -md
     @media (min-width: 768px) and (max-width: 991.98px) { @content; }
 }
 
-@mixin tablet-portrait-to-desktop {
+@mixin tablet-portrait-to-desktop { 
     @media (min-width: 768px) and (max-width: 1199.98px) { @content; }
 }
 
@@ -40,11 +40,11 @@
     @media (max-width: 991.98px) { @content; }
 }
 
-@mixin tablet-landscape-up {
+@mixin tablet-landscape-up { // -lg
     @media (min-width: 992px) { @content; }
 }
 
-@mixin tablet-landscape-to-desktop {
+@mixin tablet-landscape-to-desktop { // -lg
     @media (min-width: 992px) and (max-width: 1199.98px) { @content; }
 }
 
@@ -52,7 +52,7 @@
     @media (max-width: 1199.98px){ @content; }
 }
 
-@mixin desktop-up {
+@mixin desktop-up { // -xl
     @media (min-width: 1200px) { @content; }
 }
 
