Makes flat-module pic responsive

--- a/assets/css/source/_blog.scss
+++ b/assets/css/source/_blog.scss
@@ -226,11 +226,21 @@
             }
     
             .flat-module{
-    
+
                 img{
-                    max-height: 260px;
                     object-fit: cover;
+                    object-position: center;
+                    max-height: 140px;
+
+                    @include desktop-up{
+                        max-height: 260px;
+                    }
+
+                    @include phone-only{
+                        max-height: 100px;
+                    }
                 }
+
             }
 
         }
