--- a/assets/css/source/_blog.scss
+++ b/assets/css/source/_blog.scss
@@ -1,5 +1,3 @@
-/*---------- BLOG ---------- */
-
 #blog-index,
 #blog-detail{
 
@@ -15,33 +13,20 @@
             margin-bottom: 1.5rem;
         }
 
-        .social{ // create component!
-            padding: 0;
-            flex-wrap: wrap;
-    
-            .social-icon{ 
-                padding: {
-                    top: 10px;
-                    right: 0.5rem;
-                }
-    
-                img{
-                    width: 25px;
-                    mix-blend-mode: exclusion;
+        .social{
+            @extend %social-icons;
+            align-items: flex-start;
 
-                    @include tablet-landscape-down{
-                        width: 20px;
-                    }
-                }
-    
-            }  
-            
-        }
+            .social-icon{
+                display: unset;
+            }
+        } 
+        
     }
 
     .mini-module{
         margin-bottom: 20px;
-        &.border-bottom{ // all are .border-bottom (join?)
+        &.border-bottom{
             padding-bottom: 20px;
             border-bottom: 1px solid $grey !important;
         }
@@ -289,32 +274,11 @@
 
         #follow-us{
 
-            .social-icons{ // create component!
-                padding: 0;
-                flex-wrap: wrap;
-                // own properties
-                display: flex;
-                justify-content: flex-end;
-                align-items: flex-start; 
+            .social{
+                @extend %social-icons;
 
-        
-                .social-icon{
-                    display: flex; // own property
-                    padding: {
-                        //top: 10px; --> own no-property
-                        right: 0.5rem;
-                    }
-        
-                    img{
-                        //width: 30px;
-                        width: 15px; // own size
-                        mix-blend-mode: exclusion;
-    
-                        /* @include tablet-landscape-down{
-                            width: 10px;
-                        } */
-                    }
-        
+                img{
+                    width: .9rem !important;
                 }
             }
         }
