Adds slight pt to footer social-icons @ mobile size

--- a/assets/css/source/_footer.scss
+++ b/assets/css/source/_footer.scss
@@ -54,6 +54,7 @@ footer{
 
             @include phone-only{
                 justify-content: center;
+                padding-top: 10px;
             }
     
                 img{
